[gd_scene load_steps=7 format=3 uid="uid://w14yd0nlxnve"]

[ext_resource type="Script" uid="uid://b1e06m5rytquc" path="res://GUI/pause_menu/equipment/equipment_menu.gd" id="1_f4u6d"]
[ext_resource type="PackedScene" uid="uid://dqbra5e5e2p0q" path="res://GUI/pause_menu/equipment/equipment_slot.tscn" id="2_3al32"]
[ext_resource type="Script" uid="uid://ddd7jpkh1t2fk" path="res://GUI/pause_menu/equipment/scripts/equipment_ui.gd" id="2_f4u6d"]
[ext_resource type="Resource" uid="uid://2s08eeixxixc" path="res://GUI/pause_menu/equipment/player_equipment_inventory.tres" id="3_rhxwo"]

[sub_resource type="Gradient" id="Gradient_88q6a"]
colors = PackedColorArray(0.08922793, 0.14711152, 0.24881959, 1, 0.7692804, 0.7953067, 0.68793756, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_yl21o"]
gradient = SubResource("Gradient_88q6a")
fill_from = Vector2(0.1375, 0)
fill_to = Vector2(0.75, 0.56875)

[node name="EquipMenu" type="CanvasLayer"]
script = ExtResource("1_f4u6d")

[node name="ColorRect3" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -321.0
offset_top = -192.0
offset_right = 317.0
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.2508037, 0.43893027, 0.72503954, 1)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(316.95752, 187.20679)
rotation = 4.712389
scale = Vector2(5.8352747, 9.951797)
texture = SubResource("GradientTexture2D_yl21o")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 317.0
offset_top = 19.0
offset_right = 578.0
offset_bottom = 86.0
grow_horizontal = 2

[node name="PanelContainer2" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 317.0
offset_top = 95.0
offset_right = 578.0
offset_bottom = 201.89655
grow_horizontal = 2
scale = Vector2(1, 1.1600001)

[node name="PanelContainer3" type="PanelContainer" parent="Control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 317.0
offset_top = 234.00002
offset_right = 578.0
offset_bottom = 328.82758
grow_horizontal = 2
scale = Vector2(1, 1.1600001)

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
visible = false
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 42.0
offset_top = 12.0
offset_right = 207.0
offset_bottom = 148.0
grow_vertical = 2

[node name="Button_Save" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Equip"

[node name="Button_Load" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Items"

[node name="Button_Spells" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Spells"

[node name="Button_Stats" type="Button" parent="Control/VBoxContainer"]
layout_mode = 2
text = "Stats"

[node name="Stats" type="Node" parent="Control"]

[node name="Resistances" type="HBoxContainer" parent="Control/Stats"]
custom_minimum_size = Vector2(0, 0.35)
offset_left = 345.0
offset_top = 53.0
offset_right = 441.0
offset_bottom = 67.00003

[node name="Label" type="Label" parent="Control/Stats/Resistances"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Resistances  "

[node name="Label2" type="Label" parent="Control/Stats/Resistances"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "N/A "
horizontal_alignment = 2

[node name="Weaknesses" type="HBoxContainer" parent="Control/Stats"]
custom_minimum_size = Vector2(0, 0.35)
offset_left = 345.0
offset_top = 68.0
offset_right = 439.0
offset_bottom = 82.00003

[node name="Label" type="Label" parent="Control/Stats/Weaknesses"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Weaknesses"

[node name="Label2" type="Label" parent="Control/Stats/Weaknesses"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "N/A"
horizontal_alignment = 2

[node name="HpCont" type="HBoxContainer" parent="Control/Stats"]
custom_minimum_size = Vector2(0, 0.35)
offset_left = 345.0
offset_top = 25.0
offset_right = 429.00003
offset_bottom = 39.000027

[node name="Label" type="Label" parent="Control/Stats/HpCont"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "HP            "

[node name="Label2" type="Label" parent="Control/Stats/HpCont"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "100"
horizontal_alignment = 2

[node name="HP_changed" type="Label" parent="Control/Stats/HpCont"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9644089, 0.77621365, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="HpCont2" type="HBoxContainer" parent="Control/Stats"]
custom_minimum_size = Vector2(0, 0.35)
offset_left = 345.0
offset_top = 38.365
offset_right = 429.00003
offset_bottom = 52.36508

[node name="Label" type="Label" parent="Control/Stats/HpCont2"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "SP"

[node name="Label2" type="Label" parent="Control/Stats/HpCont2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "100"
horizontal_alignment = 2

[node name="SP_changed" type="Label" parent="Control/Stats/HpCont2"]
custom_minimum_size = Vector2(40, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9644089, 0.77621365, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="StatsCont" type="VBoxContainer" parent="Control/Stats"]
offset_left = 346.0
offset_top = 113.0
offset_right = 489.0
offset_bottom = 199.0
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer3" type="HBoxContainer" parent="Control/Stats/StatsCont"]
custom_minimum_size = Vector2(0, 0.35)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Stats/StatsCont/HBoxContainer3"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Strength       "

[node name="Label2" type="Label" parent="Control/Stats/StatsCont/HBoxContainer3"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="Str_changed" type="Label" parent="Control/Stats/StatsCont/HBoxContainer3"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9644089, 0.77621365, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="HBoxContainer4" type="HBoxContainer" parent="Control/Stats/StatsCont"]
custom_minimum_size = Vector2(0, 0.35)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Stats/StatsCont/HBoxContainer4"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Constitution"

[node name="Label2" type="Label" parent="Control/Stats/StatsCont/HBoxContainer4"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="Def_changed" type="Label" parent="Control/Stats/StatsCont/HBoxContainer4"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9644089, 0.77621365, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="HBoxContainer5" type="HBoxContainer" parent="Control/Stats/StatsCont"]
custom_minimum_size = Vector2(0, 0.35)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Stats/StatsCont/HBoxContainer5"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Speed            "

[node name="Label2" type="Label" parent="Control/Stats/StatsCont/HBoxContainer5"]
custom_minimum_size = Vector2(29, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="Spd_changed" type="Label" parent="Control/Stats/StatsCont/HBoxContainer5"]
custom_minimum_size = Vector2(29, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9644089, 0.77621365, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="HBoxContainer6" type="HBoxContainer" parent="Control/Stats/StatsCont"]
custom_minimum_size = Vector2(0, 0.35)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Stats/StatsCont/HBoxContainer6"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Spirit Potency"

[node name="Label2" type="Label" parent="Control/Stats/StatsCont/HBoxContainer6"]
custom_minimum_size = Vector2(23.895, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="Spp_changed" type="Label" parent="Control/Stats/StatsCont/HBoxContainer6"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9644089, 0.77621365, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="Control/Stats/StatsCont"]
custom_minimum_size = Vector2(0, 0.35)
layout_mode = 2

[node name="Label" type="Label" parent="Control/Stats/StatsCont/HBoxContainer7"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.67897266, 0.82246137, 0.82246137, 1)
theme_override_colors/font_shadow_color = Color(0.25265828, 0.31187868, 0.37767914, 0.5803922)
theme_override_font_sizes/font_size = 10
text = "Willpower    "

[node name="Label2" type="Label" parent="Control/Stats/StatsCont/HBoxContainer7"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="Wil_changed" type="Label" parent="Control/Stats/StatsCont/HBoxContainer7"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9644089, 0.77621365, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.2)
theme_override_font_sizes/font_size = 10
text = "1"
horizontal_alignment = 2

[node name="Control2" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ArmorCont" type="PanelContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -2.0
offset_top = 40.0
offset_right = 38.0
offset_bottom = 344.0
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="Control2/ArmorCont"]
layout_mode = 2
columns = 13
script = ExtResource("2_f4u6d")
data = ExtResource("3_rhxwo")

[node name="VBoxContainer" type="VBoxContainer" parent="Control2/ArmorCont/GridContainer"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 2

[node name="EquipmentSlot" parent="Control2/ArmorCont/GridContainer/VBoxContainer" instance=ExtResource("2_3al32")]
layout_mode = 2

[node name="EquipmentSlot2" parent="Control2/ArmorCont/GridContainer/VBoxContainer" instance=ExtResource("2_3al32")]
layout_mode = 2

[node name="EquipmentSlot3" parent="Control2/ArmorCont/GridContainer/VBoxContainer" instance=ExtResource("2_3al32")]
layout_mode = 2

[node name="EquipmentSlot4" parent="Control2/ArmorCont/GridContainer/VBoxContainer" instance=ExtResource("2_3al32")]
layout_mode = 2

[node name="EquipmentSlot5" parent="Control2/ArmorCont/GridContainer/VBoxContainer" instance=ExtResource("2_3al32")]
layout_mode = 2

[node name="EquipmentSlot6" parent="Control2/ArmorCont/GridContainer/VBoxContainer" instance=ExtResource("2_3al32")]
layout_mode = 2

[node name="EquipmentSlot7" parent="Control2/ArmorCont/GridContainer/VBoxContainer" instance=ExtResource("2_3al32")]
layout_mode = 2

[node name="CharmCont" type="PanelContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 44.0
offset_top = 302.505
offset_right = 172.0
offset_bottom = 343.505
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="Control2/CharmCont"]
layout_mode = 2
columns = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/CharmCont/GridContainer"]
layout_mode = 2

[node name="RingCont" type="PanelContainer" parent="Control2"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 178.0
offset_top = 302.505
offset_right = 306.0
offset_bottom = 343.505
grow_horizontal = 2

[node name="GridContainer" type="GridContainer" parent="Control2/RingCont"]
layout_mode = 2
columns = 6

[node name="HBoxContainer" type="HBoxContainer" parent="Control2/RingCont/GridContainer"]
layout_mode = 2
